# link-ctl

./: .gitignore  API.md  DEVELOPMENT.md  PORTS.md  README.md  link_ctl.py  link_usb.py  link_usb_linux.py  link_usb_macos.py  pyproject.toml  validate.py
.githooks/: post-commit  pre-commit  prepare-commit-msg
.github/: CODEOWNERS
.github/workflows/: auto-assign.yml  ci.yml  release.yml
Formula/: link-ctl.rb
docs/: LINK2_LINUX.md  STREAMDECK_LINUX.md
scripts/: bump_version.py  update_formula.py
streamdeck/: _common.sh  autoexposure_toggle.sh  awb_toggle.sh  center.sh  deskview_off.sh  deskview_on.sh  hdr_off.sh  hdr_on.sh  mirror_off.sh  mirror_on.sh  normal.sh  overhead_off.sh  overhead_on.sh  privacy_off.sh  privacy_on.sh  reset.sh  track_off.sh  track_on.sh  whiteboard_off.sh  whiteboard_on.sh  zoom_in.sh  zoom_out.sh
streamdeck/opendeck/: Link2.json  install.sh
tests/: test_status.py
tools/: 99-insta360-link.rules  Makefile  ai_mode_stream_test.py  apitest.py  build_opendeck_profile.py  gap-finder.py  mobileui-dump.py  probe_ai_modes.py  probe_unmapped_xu.py  reset_link2.sh  sign_adhoc.sh  smoke_capture.py  status_smoke.sh  streamdeck_smoke.sh  usb_suspend.m  uvc-probe-linux.c  uvc-probe.m  validate.py  xu_capture.py  xu_discover.py  xu_snapshot_linux.py  xu_verify.py
