[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "link-ctl"
version = "1.0.1"
description = "CLI controller for Insta360 Link webcam via Link Controller app"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
dependencies = [
    "websockets>=11",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Environment :: Console",
    "Topic :: Multimedia :: Video",
    "Topic :: Home Automation",
]

[project.scripts]
link-ctl = "link_ctl:main"

[tool.setuptools]
py-modules = ["link_ctl"]
