[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "link-ctl"
version = "2.1.2"
description = "CLI + pure-Python library for the Insta360 Link webcam — USB-direct on macOS via ctypes-to-IOKit, WebSocket fallback on Windows, v4l2 on Linux"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
dependencies = [
    "websockets>=11",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Environment :: Console",
    "Topic :: Multimedia :: Video",
    "Topic :: Home Automation",
]

[project.scripts]
link-ctl = "link_ctl:main"

[tool.setuptools]
# link_ctl imports link_usb_macos lazily on macOS for the pure-Python
# USB-direct path (ctypes → IOKit). Without it the package silently falls
# back to the WebSocket route at runtime, defeating the whole point of
# v2.x on macOS. Keep them both listed here so pip installs get a
# working USB-direct stack out of the box.
py-modules = ["link_ctl", "link_usb_macos"]
